--- a/text.html
+++ b/text.html
@@ -2,28 +2,27 @@
  <html lang="en">
  <head>      
      <meta charset="utf-8">
-     <title>servises</title>
-     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/v4-shims.css">
-     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
+     <title>servises</title>   
      <link rel="stylesheet" href="style.css">
-     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.12.0/css/all.css">  
+     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.12.0/css/all.css">
+     <link href="https://fonts.googleapis.com/css?family=Montserrat|Odibee+Sans|Oswald&display=swap" rel="stylesheet">
  </head>
  <body>
 
  <header class="header">
   <div class="container">
-     <div class="header__logo"><img src="img/logo.png"></div>
+    <div class="header__logo"><img src="img/logo.png"></div>
        <div class="header__item">
-         <nav class="menu">
-           <ul>
-             <li><a href="#">Home</a></li>
-             <li><a href="#">About</a></li>
-             <li><a href="#">Portfolio</a></li>
-             <li><a href="#">Shop</a></li>
-             <li><a href="#">Contact</a></li>
-             <li><a href="#">Pages</a></li>
-          </ul>
-        </nav>
+          <nav class="menu">
+            <ul>
+               <li><a href="#">Home</a></li>
+               <li><a href="#">About</a></li>
+               <li><a href="#">Portfolio</a></li>
+               <li><a href="#">Shop</a></li>
+               <li><a href="#">Contact</a></li>
+               <li><a href="#">Pages</a></li>
+           </ul>
+         </nav>
       </div>
     </div>
   <div class="header__icon">
@@ -39,9 +38,8 @@
        <div class="about__title">
          <h1>A little about us</h1>
       </div>
-    <div class="slider__inner"></div>
-    
-   <div class="about__tex">      
+    <div class="slider__inner"></div>  
+    <div class="about__tex">      
       <p>We are  a company based in india with the   motto    “Digitalally
        Designed India”. We are  a company based in india with the   motto
        “Digitalally  Designed India”. We are  a company based in  india
@@ -53,7 +51,7 @@
        motto “Digitalally Designed India”.  We are  a company  based in
        India with the motto “Digitalally Designed India”.  We are  a
        company based in india with the motto “Digitalally   Designed India”.</p>      
-    </div>
+    </div>    
    <div class="about__btn">
       <a clsss="about__btn" href="#">READ MORE DETAILS</a> 
       </div>
@@ -61,73 +59,107 @@
   </section>
 
   <section class="servises">
-    <div class=container>  
-      <div class="servises__our">
+     <div class=container>  
+     <div class="servises__our">
         <h1>OUR SERVICES</h1>    
-      </div>
-    <div class="slider__left"></div>
-        <div class="slider__right"></div>
-     </div>
+   </div>
+     <div class="slider__left"></div>
+      <div class="slider__right"></div>
+   </div>
   </section>
 
   <section class="midlle">
     <div class=container>
       <div class="middle__box">
-        <div class="midlle__server"> 
+    <div class="midlle__server"> 
           <img src="img/icon-1.png" alt="">
           <h1>Web DEVELOPMENT</h1>       
           <p>We provide the best world class web 
            development service We provide the best world
            class web development service</p>
-        <div class="midlle__btn">               
+    <div class="midlle__btn">               
           <a clsss="midlle__btn" href="#">MORE DETAILS</a>
        </div>
      </div>
-
      <div class="midlle__server">             
           <img src="img/icon-2.png" alt=""> 
           <h1>Web DEVELOPMENT</h1>   
           <p>We provide the best world class web 
           development service We provide the best world
           class web development service</p>
-        <div class="midlle__btn">               
+     <div class="midlle__btn">               
           <a clsss="midlle__btn" href="#">MORE DETAILS</a>
         </div>
-      </div>
-       
+      </div>       
       <div class="midlle__server"> 
           <img src="img/icon-3.png" alt="">
           <h1>Web DEVELOPMENT</h1>       
           <p>We provide the best world class web 
           development service We provide the best world
           class web development service</p>
-        <div class="midlle__btn">               
+      <div class="midlle__btn">               
           <a clsss="midlle__btn" href="#">MORE DETAILS</a>
           </div>
         </div>   
       </div>
-
       <div class="baner__pro"> 
-        <div class="arrow__left">
-          <a href="#"target="_blank" rel="nofollow"><i class="fal fa-angle-left"></i></a>
+       <div class="arrow__left">
+          <a href="#"target="_blank" rel="nofollow"><i class="fal fa-chevron-left"></i></a>
         </div>     
        <div class="arrow__right">
-          <a href="#"target="_blank" rel="nofollow"><i class="fal fa-angle-right"></i></a>
-       </div>
+          <a href="#"target="_blank" rel="nofollow"><i class="fal fa-chevron-right"></i></a>
+          </div>
          </div>       
-       </div>
+        </div>
    </section>
    
    <section class="Feedback">
-       <div class=container>  
-         <div class="Feedback__home">
-           <h1>Feedback</h1>    
-        </div>
+      <div class=container>      
+       <div class="Feedback__home">
+          <h1>Feedback</h1>    
+     </div>
        <div class="slider__left"></div>
-         <div class="slider__right"></div>
-      </div>
-  </section>
-
+        <div class="slider__right"></div>     
+     </div>
+   </section>
+   
+   <section class="inner__contakt">
+       <div class="container">      
+         <div class="inner__profil"> 
+       <div class="inner__person">
+           <img src="img/person.png" alt="">
+       <span class="wrrap">01</span>
+       <span class="wrrap__wrrap">Imran Khan CEO, Vesso</span>
+        </div>
+       <div class="inner__person">   
+           <img src="img/person 2.png" alt="">
+       <span class="wrrap-1">01</span> 
+       <span class="wrrap__wrrap-1">Imran Khan CEO, Vesso</span>
+        </div>
+       <div class="inner__person"> 
+           <img src="img/person 3.png" alt="">           
+       <span class="wrrap-2">01</span>
+       <span class="wrrap__wrrap-2">Imran Khan CEO, Vesso</span>
+         </div>
+        </div>    
+       </div>
+      <div class="proekt__closse">
+       <div class="proekt__tex">
+          <p>It was always a pleasure
+            doing bussiness with them. 
+             I love the quality of work.</p>          
+        </div>
+       <div class="proekt__line"></div>
+          <b class="proekt__nomer">1/10</b>
+       <div class="proekt__left">
+          <a href="#"target="_blank" rel="nofollow"><i class="fal fa-chevron-left"></i></a>
+         </div>   
+       <div class="proekt__right">
+          <a href="#"target="_blank" rel="nofollow"><i class="fal fa-chevron-right"></i></a>
+        </div> 
+      </div>      
+   
+   </section>
 
    <section>
    <div class=container></div>
