--- a/text.html
+++ b/text.html
@@ -157,13 +157,17 @@
        <div class="proekt__right">
           <a href="#"target="_blank" rel="nofollow"><i class="fal fa-chevron-right"></i></a>
         </div> 
-      </div>      
-   
+      </div>  
    </section>
 
-   <section>
-   <div class=container></div>
-
+   <section class="clients">
+   <div class=container>
+     <div class="clients__visions">
+       <h1>Clients</h1>
+    </div>
+   <div class="clients__left"></div>
+     <div class="clients__right"></div>
+   </div>
    </section>
 
    <section>
