--- a/text.html
+++ b/text.html
@@ -168,6 +168,20 @@
    <div class="clients__left"></div>
      <div class="clients__right"></div>
    </div>
+     <div class="clients__basis">
+     <div class="clients__icon">        
+        <img src="img/adobe-logo.png" alt="">
+        <img src="img/guideline-based.png" alt="">
+        <img src="img/infosys-logo.png" alt="">
+        <img src="img/invision.png" alt=""> 
+      </div>
+      <div class="clients__item">         
+        <img src="img/cisco-logo.png" alt=""> 
+        <img src="img/behance.png" alt="">
+        <img src="img/canva-logo.png" alt="">
+        <img src="img/instagram-logo.png" alt="">   
+      </div>
+     </div>
    </section>
 
    <section>
@@ -181,3 +195,5 @@
    </footer>
 
    </body>
+
+    
