--- a/text.html
+++ b/text.html
@@ -26,9 +26,9 @@
       </div>
     </div>
   <div class="header__icon">
-    <a href="#"target="_blank" rel="nofollow"><i class="fab fa-facebook-f"></i></a>
-    <a href="#"target="_blank" rel="nofollow"><i class="fab fa-twitter"></i></a>
-    <a href="#"target="_blank" rel="nofollow"><i class="fab fa-google-plus-g"></i></a>
+      <a href="#"target="_blank" rel="nofollow"><i class="fab fa-facebook-f"></i></a>
+      <a href="#"target="_blank" rel="nofollow"><i class="fab fa-twitter"></i></a>
+      <a href="#"target="_blank" rel="nofollow"><i class="fab fa-google-plus-g"></i></a>
    </div>
   <div class="gorizont__liner"></div>
   </header>
@@ -40,17 +40,17 @@
       </div>
     <div class="slider__inner"></div>  
     <div class="about__tex">      
-      <p>We are  a company based in india with the   motto    “Digitalally
-       Designed India”. We are  a company based in india with the   motto
-       “Digitalally  Designed India”. We are  a company based in  india
-       with the motto “Digitalally  Designed India”.</p>       
+        <p>We are  a company based in india with the   motto    “Digitalally
+         Designed India”. We are  a company based in india with the   motto
+         “Digitalally  Designed India”. We are  a company based in  india
+         with the motto “Digitalally  Designed India”.</p>       
      </div>
     <div class="about__tex2">     
-       <p>We are  a company based in india with the motto  “Digitalally
-       Designed India”. We are  a company based in india with the
-       motto “Digitalally Designed India”.  We are  a company  based in
-       India with the motto “Digitalally Designed India”.  We are  a
-       company based in india with the motto “Digitalally   Designed India”.</p>      
+         <p>We are  a company based in india with the motto  “Digitalally
+         Designed India”. We are  a company based in india with the
+         motto “Digitalally Designed India”.  We are  a company  based in
+         India with the motto “Digitalally Designed India”.  We are  a
+         company based in india with the motto “Digitalally   Designed India”.</p>      
     </div>    
    <div class="about__btn">
       <a clsss="about__btn" href="#">READ MORE DETAILS</a> 
@@ -100,10 +100,10 @@
       <div class="midlle__btn">               
           <a clsss="midlle__btn" href="#">MORE DETAILS</a>
           </div>
-        </div>   
-      </div>
-      <div class="baner__pro"> 
-       <div class="arrow__left">
+         </div>   
+        </div>
+       <div class="baner__pro"> 
+         <div class="arrow__left">
           <a href="#"target="_blank" rel="nofollow"><i class="fal fa-chevron-left"></i></a>
         </div>     
        <div class="arrow__right">
@@ -115,10 +115,10 @@
    
    <section class="Feedback">
       <div class=container>      
-       <div class="Feedback__home">
+        <div class="Feedback__home">
           <h1>Feedback</h1>    
-     </div>
-       <div class="slider__left"></div>
+        </div>
+      <div class="slider__left"></div>
         <div class="slider__right"></div>     
      </div>
    </section>
@@ -161,26 +161,34 @@
    </section>
 
    <section class="clients">
-   <div class=container>
-     <div class="clients__visions">
-       <h1>Clients</h1>
-    </div>
-   <div class="clients__left"></div>
-     <div class="clients__right"></div>
-   </div>
-     <div class="clients__basis">
-     <div class="clients__icon">        
-        <img src="img/adobe-logo.png" alt="">
-        <img src="img/guideline-based.png" alt="">
-        <img src="img/infosys-logo.png" alt="">
-        <img src="img/invision.png" alt=""> 
+     <div class=container>
+       <div class="clients__visions">
+         <h1>Clients</h1>
       </div>
-      <div class="clients__item">         
-        <img src="img/cisco-logo.png" alt=""> 
-        <img src="img/behance.png" alt="">
-        <img src="img/canva-logo.png" alt="">
-        <img src="img/instagram-logo.png" alt="">   
+     <div class="clients__left"></div>
+       <div class="clients__right"></div>   
+     <div class="color__center">
+       <div class="color__left">
+        <a href="#"target="_blank" rel="nofollow"><i class="fal fa-chevron-left"></i></a>
       </div>
+     <div class="color__right">
+        <a href="#"target="_blank" rel="nofollow"><i class="fal  fa-chevron-right"></i></a>         
+        </div>
+      </div>
+     <div class="clients__pajes">
+       <div class="clients__icon">        
+          <img src="img/adobe-logo.png" alt="">
+          <img src="img/guideline-based.png" alt="">
+          <img src="img/infosys-logo.png" alt="">
+          <img src="img/invision.png" alt=""> 
+        </div>
+     <div class="clients__icon">         
+          <img src="img/cisco-logo.png" alt=""> 
+          <img src="img/behance.png" alt="">
+          <img src="img/canva-logo.png" alt="">
+          <img src="img/instagram-logo.png" alt="">    
+         </div> 
+       </div>
      </div>
    </section>
 
@@ -192,8 +200,8 @@
    <footer>
    <div class=container></div>
 
-   </footer>
+   </footer>  
 
    </body>
 
-    
+      
