--- a/text.html
+++ b/text.html
@@ -63,50 +63,50 @@
      <div class="servises__our">
         <h1>OUR SERVICES</h1>    
    </div>
-     <div class="slider__left"></div>
-      <div class="slider__right"></div>
+     <div class="servises__left"></div>
+      <div class="servises__right"></div>
    </div>
   </section>
 
-  <section class="midlle">
+  <section class="detalis">
     <div class=container>
-      <div class="middle__box">
-    <div class="midlle__server"> 
-          <img src="img/icon-1.png" alt="">
+      <div class="detalis__box">
+    <div class="detalis__server"> 
+        <img src="img/icon-1.png" alt="">
           <h1>Web DEVELOPMENT</h1>       
           <p>We provide the best world class web 
            development service We provide the best world
            class web development service</p>
-    <div class="midlle__btn">               
-          <a clsss="midlle__btn" href="#">MORE DETAILS</a>
+    <div class="detalis__btn">               
+          <a clsss="detalis__btn" href="#">MORE DETAILS</a>
        </div>
      </div>
-     <div class="midlle__server">             
-          <img src="img/icon-2.png" alt=""> 
+     <div class="detalis__server">             
+        <img src="img/icon-2.png" alt=""> 
           <h1>Web DEVELOPMENT</h1>   
           <p>We provide the best world class web 
           development service We provide the best world
           class web development service</p>
-     <div class="midlle__btn">               
-          <a clsss="midlle__btn" href="#">MORE DETAILS</a>
+     <div class="detalis__btn">               
+          <a clsss="detalis__btn" href="#">MORE DETAILS</a>
         </div>
       </div>       
-      <div class="midlle__server"> 
-          <img src="img/icon-3.png" alt="">
+      <div class="detalis__server"> 
+        <img src="img/icon-3.png" alt="">
           <h1>Web DEVELOPMENT</h1>       
           <p>We provide the best world class web 
           development service We provide the best world
           class web development service</p>
-      <div class="midlle__btn">               
-          <a clsss="midlle__btn" href="#">MORE DETAILS</a>
+      <div class="detalis__btn">               
+          <a clsss="detalis__btn" href="#">MORE DETAILS</a>
           </div>
          </div>   
         </div>
-       <div class="baner__pro"> 
-         <div class="arrow__left">
+       <div class="invisions__pro"> 
+         <div class="invisions__left">
           <a href="#"target="_blank" rel="nofollow"><i class="fal fa-chevron-left"></i></a>
         </div>     
-       <div class="arrow__right">
+       <div class="invisions__right">
           <a href="#"target="_blank" rel="nofollow"><i class="fal fa-chevron-right"></i></a>
           </div>
          </div>       
@@ -118,46 +118,46 @@
         <div class="Feedback__home">
           <h1>Feedback</h1>    
         </div>
-      <div class="slider__left"></div>
-        <div class="slider__right"></div>     
+      <div class="Feedback__left"></div>
+        <div class="Feedback__right"></div>     
      </div>
    </section>
    
-   <section class="inner__contakt">
-       <div class="container">      
-         <div class="inner__profil"> 
-       <div class="inner__person">
-           <img src="img/person.png" alt="">
-       <span class="wrrap">01</span>
-       <span class="wrrap__wrrap">Imran Khan CEO, Vesso</span>
-        </div>
-       <div class="inner__person">   
-           <img src="img/person 2.png" alt="">
-       <span class="wrrap-1">01</span> 
-       <span class="wrrap__wrrap-1">Imran Khan CEO, Vesso</span>
-        </div>
-       <div class="inner__person"> 
-           <img src="img/person 3.png" alt="">           
-       <span class="wrrap-2">01</span>
-       <span class="wrrap__wrrap-2">Imran Khan CEO, Vesso</span>
-         </div>
-        </div>    
-       </div>
-      <div class="proekt__closse">
-       <div class="proekt__tex">
+   <section class="contakt">
+      <div class="container">
+        <div class="contakt__closse">
+      <div class="contakt__tex">
           <p>It was always a pleasure
             doing bussiness with them. 
              I love the quality of work.</p>          
         </div>
-       <div class="proekt__line"></div>
-          <b class="proekt__nomer">1/10</b>
-       <div class="proekt__left">
-          <a href="#"target="_blank" rel="nofollow"><i class="fal fa-chevron-left"></i></a>
+       <div class="contakt__line"></div>
+           <b class="contakt__nomer">1/10</b>
+       <div class="contakt__left">
+           <a href="#"target="_blank" rel="nofollow"><i class="fal fa-chevron-left"></i></a>
          </div>   
-       <div class="proekt__right">
-          <a href="#"target="_blank" rel="nofollow"><i class="fal fa-chevron-right"></i></a>
-        </div> 
-      </div>  
+       <div class="contakt__right">
+           <a href="#"target="_blank" rel="nofollow"><i class="fal fa-chevron-right"></i></a>
+         </div> 
+        </div>      
+       <div class="portfolio ixbox">
+        <div class="portfolio__inter-101">
+           <img src="img/person 1.png" alt="">
+           <span class="wrrap">01</span>
+           <span class="wrrap__wrrap">Imran Khan CEO, Vesso</span>
+        </div>
+       <div class="portfolio__inter-101">   
+           <img src="img/person 2.png" alt="">
+           <span class="wrrap-2">01</span> 
+           <span class="wrrap__wrrap-2">Imran Khan CEO, Vesso</span>
+        </div>
+       <div class="portfolio__inter-101"> 
+           <img src="img/person 3.png" alt="">        
+           <span class="wrrap-3">01</span>
+           <span class="wrrap__wrrap-3">Imran Khan CEO, Vesso</span>
+        </div>
+       </div>    
+      </div>     
    </section>
 
    <section class="clients">
@@ -167,14 +167,14 @@
       </div>
      <div class="clients__left"></div>
        <div class="clients__right"></div>   
-     <div class="color__center">
-       <div class="color__left">
+     <div class="clients__center">
+       <div class="clients__chevron-left">
         <a href="#"target="_blank" rel="nofollow"><i class="fal fa-chevron-left"></i></a>
       </div>
-     <div class="color__right">
+     <div class="clients__chevron-right">
         <a href="#"target="_blank" rel="nofollow"><i class="fal  fa-chevron-right"></i></a>         
         </div>
-      </div>
+      </div>   
      <div class="clients__pajes">
        <div class="clients__icon">        
           <img src="img/adobe-logo.png" alt="">
@@ -192,8 +192,23 @@
      </div>
    </section>
 
-   <section>
-   <div class=container></div>
+   <section class="quote">
+     <div class=container>
+      <div class="quote__exspress">
+        <h1>Any Queries | Get a quote</h1> 
+        <p>If you have any questions or queries regarding our service or pricing don’t worry
+         Our experts will call you.</p>       
+      </div>
+      <div class="quote__subscride">
+        <p clscc="subscride">Your name</p>
+        <p clscc="subscride">Your number</p>
+        <p clscc="subscride">Get a call</p>
+      </div>
+     </div>
+     
+
+
+   
 
    </section>
 
