--- a/text.html
+++ b/text.html
@@ -17,29 +17,30 @@
             <ul>
                <li><a href="#">Home</a></li>
                <li><a href="#">About</a></li>
+               <li><a href="#">Services</a></li>
                <li><a href="#">Portfolio</a></li>
                <li><a href="#">Shop</a></li>
                <li><a href="#">Contact</a></li>
                <li><a href="#">Pages</a></li>
            </ul>
          </nav>
-      </div>
+       </div>
+     </div>
+   <div class="header__icon">
+        <a href="#"target="_blank" rel="nofollow"><i class="fab fa-facebook-f"></i></a>
+        <a href="#"target="_blank" rel="nofollow"><i class="fab fa-twitter"></i></a>
+        <a href="#"target="_blank" rel="nofollow"><i class="fab fa-google-plus-g"></i></a>
     </div>
-  <div class="header__icon">
-      <a href="#"target="_blank" rel="nofollow"><i class="fab fa-facebook-f"></i></a>
-      <a href="#"target="_blank" rel="nofollow"><i class="fab fa-twitter"></i></a>
-      <a href="#"target="_blank" rel="nofollow"><i class="fab fa-google-plus-g"></i></a>
-   </div>
-  <div class="gorizont__liner"></div>
-  </header>
+   <div class="gorizont__liner"></div>
+   </header>
 
-  <section class="about">
+   <section class="about">
     <div class="container">    
        <div class="about__title">
          <h1>A little about us</h1>
       </div>
     <div class="slider__inner"></div>  
-    <div class="about__tex">      
+     <div class="about__tex">      
         <p>We are  a company based in india with the   motto    “Digitalally
          Designed India”. We are  a company based in india with the   motto
          “Digitalally  Designed India”. We are  a company based in  india
@@ -55,17 +56,17 @@
    <div class="about__btn">
       <a clsss="about__btn" href="#">READ MORE DETAILS</a> 
       </div>
-    </div> 
+     </div> 
   </section>
 
   <section class="servises">
      <div class=container>  
-     <div class="servises__our">
+      <div class="servises__our">
         <h1>OUR SERVICES</h1>    
-   </div>
+      </div>
      <div class="servises__left"></div>
       <div class="servises__right"></div>
-   </div>
+    </div>
   </section>
 
   <section class="detalis">
@@ -79,8 +80,8 @@
            class web development service</p>
     <div class="detalis__btn">               
           <a clsss="detalis__btn" href="#">MORE DETAILS</a>
-       </div>
-     </div>
+        </div>
+      </div>
      <div class="detalis__server">             
         <img src="img/icon-2.png" alt=""> 
           <h1>Web DEVELOPMENT</h1>   
@@ -120,16 +121,16 @@
         </div>
       <div class="Feedback__left"></div>
         <div class="Feedback__right"></div>     
-     </div>
+      </div>
    </section>
    
    <section class="contakt">
-      <div class="container">
-        <div class="contakt__closse">
-      <div class="contakt__tex">
+      <div class="container">       
+        <div class="contakt__tex">
           <p>It was always a pleasure
             doing bussiness with them. 
-             I love the quality of work.</p>          
+             I love the quality of work.
+          </p>            
         </div>
        <div class="contakt__line"></div>
            <b class="contakt__nomer">1/10</b>
@@ -138,26 +139,25 @@
          </div>   
        <div class="contakt__right">
            <a href="#"target="_blank" rel="nofollow"><i class="fal fa-chevron-right"></i></a>
-         </div> 
-        </div>      
-       <div class="portfolio ixbox">
+         </div>             
+       <div class="portfolio">
         <div class="portfolio__inter-101">
-           <img src="img/person 1.png" alt="">
+           <img src="img/person 1.png" alt="person">
            <span class="wrrap">01</span>
            <span class="wrrap__wrrap">Imran Khan CEO, Vesso</span>
         </div>
        <div class="portfolio__inter-101">   
-           <img src="img/person 2.png" alt="">
+           <img src="img/person 2.png" alt="person">
            <span class="wrrap-2">01</span> 
            <span class="wrrap__wrrap-2">Imran Khan CEO, Vesso</span>
         </div>
        <div class="portfolio__inter-101"> 
-           <img src="img/person 3.png" alt="">        
+           <img src="img/person 3.png" alt="person">        
            <span class="wrrap-3">01</span>
            <span class="wrrap__wrrap-3">Imran Khan CEO, Vesso</span>
-        </div>
-       </div>    
-      </div>     
+         </div>
+        </div>    
+       </div>     
    </section>
 
    <section class="clients">
@@ -169,24 +169,24 @@
        <div class="clients__right"></div>   
      <div class="clients__center">
        <div class="clients__chevron-left">
-        <a href="#"target="_blank" rel="nofollow"><i class="fal fa-chevron-left"></i></a>
+          <a href="#"target="_blank" rel="nofollow"><i class="fal fa-chevron-left"></i></a>
       </div>
      <div class="clients__chevron-right">
-        <a href="#"target="_blank" rel="nofollow"><i class="fal  fa-chevron-right"></i></a>         
+          <a href="#"target="_blank" rel="nofollow"><i class="fal  fa-chevron-right"></i></a>         
         </div>
       </div>   
      <div class="clients__pajes">
        <div class="clients__icon">        
-          <img src="img/adobe-logo.png" alt="">
-          <img src="img/guideline-based.png" alt="">
-          <img src="img/infosys-logo.png" alt="">
-          <img src="img/invision.png" alt=""> 
+          <img src="img/adobe-logo.png" alt="adobe">
+          <img src="img/guideline-based.png" alt="guideline">
+          <img src="img/infosys-logo.png" alt="infosys">
+          <img src="img/invision.png" alt="invision"> 
         </div>
      <div class="clients__icon">         
-          <img src="img/cisco-logo.png" alt=""> 
-          <img src="img/behance.png" alt="">
-          <img src="img/canva-logo.png" alt="">
-          <img src="img/instagram-logo.png" alt="">    
+          <img src="img/cisco-logo.png" alt="cisco"> 
+          <img src="img/behance.png" alt="behance">
+          <img src="img/canva-logo.png" alt="canva">
+          <img src="img/instagram-logo.png" alt="instagram">    
          </div> 
        </div>
      </div>
@@ -195,28 +195,61 @@
    <section class="quote">
      <div class=container>
       <div class="quote__exspress">
-        <h1>Any Queries | Get a quote</h1> 
-        <p>If you have any questions or queries regarding our service or pricing don’t worry
-         Our experts will call you.</p>       
+          <h1>Any Queries | Get a quote</h1> 
+          <p>If you have any questions or queries regarding our service or pricing don’t worry
+           Our experts will call you.</p>       
       </div>
-      <div class="quote__subscride">
-        <p clscc="subscride">Your name</p>
-        <p clscc="subscride">Your number</p>
-        <p clscc="subscride">Get a call</p>
-      </div>
+      <div class="quote__bridges">
+          <p clscc="_bridges">Your name</p>
+          <p clscc="_bridges">Your number</p>
+          <p clscc="_bridges">Get a call</p>
+       </div>
      </div>
-     
-
-
-   
-
    </section>
 
-   <footer>
-   <div class=container></div>
-
-   </footer>  
-
-   </body>
+   <footer class="footer">
+     <div class=container>
+      <div class="plans__contakt">
+        <ul class="plans__dellet">
+          <li class="dellet__first">Product</li>
+          <li>Cost & Governanc</li>
+          <li>Security & Complaince</li>
+          <li>Product N</li>
+          <li>Pricing & plans</li>
+        </ul>
+      <ul class="plans__dellet">
+          <li class="dellet__first">LEARN</li>
+          <li>Articles</li>
+          <li>Register a demo</li>
+          <li>Webinars</li>
+          <li>FAQs</li>
+        </ul>
+      <ul class="plans__dellet">
+          <li class="dellet__first">COMPANY</li>
+          <li>About</li>
+          <li>Careers</li>
+          <li>Partners</li>
+          <li>Contact</li>
+        </ul>
+       </div>
+      <div class="plans"> 
+        <div class="plans__email">      
+           <a clsss="email" href="#">Your email</a>
+         </div>
+       <div class="plans__Subscribe">      
+           <a clsss="Subscribe" href="#">Subscribe</a>
+         </div>     
+        </div>
+       <div class="social__google">          
+           <a href="#"target="_blank" rel="nofollow"><i class="fab fa-facebook-f"></i>
+           <a href="#"target="_blank" rel="nofollow"><i class="fab fa-twitter"></i>
+           <a href="#"target="_blank" rel="nofollow"><i class="fab fa-google-plus-g"></i>
+           <a href="#"target="_blank" rel="nofollow"><i class="fas fa-basketball-ball"></i>
+           <a href="#"target="_blank" rel="nofollow"><i class="fab fa-behance"></i>          
+           <a href="#"target="_blank" rel="nofollow"><i class="fab fa-instagram"></i>
+        </div>
+       </div>
+      </footer>
+     </body>
 
       
