--- a/text.html
+++ b/text.html
@@ -92,7 +92,7 @@
           <a clsss="detalis__btn" href="#">MORE DETAILS</a>
         </div>
       </div>       
-      <div class="detalis__server"> 
+     <div class="detalis__server"> 
         <img src="img/icon-3.png" alt="">
           <h1>Web DEVELOPMENT</h1>       
           <p>We provide the best world class web 
@@ -115,7 +115,7 @@
    </section>
    
    <section class="Feedback">
-      <div class=container>      
+      <div class="container">      
         <div class="Feedback__home">
           <h1>Feedback</h1>    
         </div>
@@ -163,7 +163,7 @@
    <section class="clients">
      <div class=container>
        <div class="clients__visions">
-         <h1>Clients</h1>
+          <h1>Clients</h1>
       </div>
      <div class="clients__left"></div>
        <div class="clients__right"></div>   
