--- a/text.html
+++ b/text.html
@@ -17,7 +17,7 @@
             <ul>
                <li><a href="#">Home</a></li>
                <li><a href="#">About</a></li>
-               <li><a href="#">Services</a></li>
+               <li class="sport"><a href="#">Services</a></li>
                <li><a href="#">Portfolio</a></li>
                <li><a href="#">Shop</a></li>
                <li><a href="#">Contact</a></li>
@@ -38,25 +38,27 @@
     <div class="container">    
        <div class="about__title">
          <h1>A little about us</h1>
-      </div>
-    <div class="slider__inner"></div>  
-     <div class="about__tex">      
-        <p>We are  a company based in india with the   motto    “Digitalally
-         Designed India”. We are  a company based in india with the   motto
-         “Digitalally  Designed India”. We are  a company based in  india
-         with the motto “Digitalally  Designed India”.</p>       
-     </div>
-    <div class="about__tex2">     
-         <p>We are  a company based in india with the motto  “Digitalally
-         Designed India”. We are  a company based in india with the
-         motto “Digitalally Designed India”.  We are  a company  based in
-         India with the motto “Digitalally Designed India”.  We are  a
-         company based in india with the motto “Digitalally   Designed India”.</p>      
-    </div>    
-   <div class="about__btn">
+       </div>
+    <div class="slider__inner"></div>
+      <div class="about__tezis">
+       <div class="about__tex">      
+          <p>We are  a company based in india with the   motto    “Digitalally
+           Designed India”. We are  a company based in india with the   motto
+           “Digitalally  Designed India”. We are  a company based in  india
+           with the motto “Digitalally  Designed India”.</p>       
+       </div>
+     <div class="about__tex">     
+           <p>We are  a company based in india with the motto  “Digitalally
+           Designed India”. We are  a company based in india with the
+           motto “Digitalally Designed India”.  We are  a company  based in
+           India with the motto “Digitalally Designed India”.  We are  a
+           company based in india with the motto “Digitalally   Designed India”.</p>      
+       </div>
+      </div>     
+    <div class="about__btn">
       <a clsss="about__btn" href="#">READ MORE DETAILS</a> 
       </div>
-     </div> 
+     </div>  
   </section>
 
   <section class="servises">
@@ -65,8 +67,8 @@
         <h1>OUR SERVICES</h1>    
       </div>
      <div class="servises__left"></div>
-      <div class="servises__right"></div>
-    </div>
+       <div class="servises__right"></div>
+     </div>
   </section>
 
   <section class="detalis">
@@ -81,7 +83,7 @@
     <div class="detalis__btn">               
           <a clsss="detalis__btn" href="#">MORE DETAILS</a>
         </div>
-      </div>
+       </div>
      <div class="detalis__server">             
         <img src="img/icon-2.png" alt=""> 
           <h1>Web DEVELOPMENT</h1>   
@@ -143,18 +145,18 @@
        <div class="portfolio">
         <div class="portfolio__inter-101">
            <img src="img/person 1.png" alt="person">
-           <span class="wrrap">01</span>
-           <span class="wrrap__wrrap">Imran Khan CEO, Vesso</span>
+             <span class="wrrap-1">01</span>
+             <span class="wrrap__wrrap-1">Imran Khan CEO, Vesso</span>
         </div>
        <div class="portfolio__inter-101">   
            <img src="img/person 2.png" alt="person">
-           <span class="wrrap-2">01</span> 
-           <span class="wrrap__wrrap-2">Imran Khan CEO, Vesso</span>
+             <span class="wrrap-2">01</span> 
+             <span class="wrrap__wrrap-2">Imran Khan CEO, Vesso</span>
         </div>
        <div class="portfolio__inter-101"> 
            <img src="img/person 3.png" alt="person">        
-           <span class="wrrap-3">01</span>
-           <span class="wrrap__wrrap-3">Imran Khan CEO, Vesso</span>
+             <span class="wrrap-3">01</span>
+             <span class="wrrap__wrrap-3">Imran Khan CEO, Vesso</span>
          </div>
         </div>    
        </div>     
@@ -164,7 +166,7 @@
      <div class=container>
        <div class="clients__visions">
           <h1>Clients</h1>
-      </div>
+       </div>
      <div class="clients__left"></div>
        <div class="clients__right"></div>   
      <div class="clients__center">
@@ -175,7 +177,7 @@
           <a href="#"target="_blank" rel="nofollow"><i class="fal  fa-chevron-right"></i></a>         
         </div>
       </div>   
-     <div class="clients__pajes">
+     <div class="clients__icons">
        <div class="clients__icon">        
           <img src="img/adobe-logo.png" alt="adobe">
           <img src="img/guideline-based.png" alt="guideline">
@@ -230,7 +232,7 @@
           <li>Careers</li>
           <li>Partners</li>
           <li>Contact</li>
-        </ul>
+         </ul>
        </div>
       <div class="plans"> 
         <div class="plans__email">      
@@ -247,9 +249,9 @@
            <a href="#"target="_blank" rel="nofollow"><i class="fas fa-basketball-ball"></i>
            <a href="#"target="_blank" rel="nofollow"><i class="fab fa-behance"></i>          
            <a href="#"target="_blank" rel="nofollow"><i class="fab fa-instagram"></i>
-        </div>
+         </div>
        </div>
-      </footer>
-     </body>
+     </footer>
+    </body>
 
       
